instructing heroku how to run web_app

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ tweepy = "*"
 scikit-learn = "*"
 gunicorn = "*"
 psycopg2-binary = "*"
+spotipy = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.7"
